--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -9,6 +9,7 @@ body {
         linear-gradient(rgba(200,0,0,.5) 50%, transparent 50%);
     background-size: 50px 50px;
     min-width: 320px;
+    /*overflow: hidden;*/
 }
 
 a {
@@ -23,17 +24,23 @@ html, body {
     /*height: 100%;*/
 }
 
+img {
+    margin-bottom:0;
+}
+
 .page-wrap {
     /*height: 100%;*/
     width: 70%;
-    padding-top: 6%;
-    /*padding-bottom: 10%;*/
+    padding-top: 20px;
+    padding-bottom: 20px;
     /*Keeps page-wrap centered H*/
     background-color: antiquewhite;
     /*padding-bottom: 2000px;*/
     /*margin: auto auto -1000px;*/
     margin: auto;
-    overflow: hidden;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    /*overflow: hidden;*/
 
 }
 
@@ -55,6 +62,20 @@ ol {
 
 ul {
     list-style: disc;
+}
+
+button {
+    background-color: whitesmoke;
+    border-radius: 0;
+    border: 1px solid #ccc;
+    cursor: pointer;
+    display: block; /*This makes the comment button centered, but moves down login...*/
+}
+
+button:hover {
+    background-color: #ccc;
+    border-color: whitesmoke;
+    color: whitesmoke;
 }
 
 @media only screen and (max-width: 480px) {
