--- a/resources/css/calendar.css
+++ b/resources/css/calendar.css
@@ -1,101 +1,106 @@
 .page-wrap {
-    height: 100%;
+    padding-bottom: 470px;
 }
 
-.day {
-    border: 1px solid black;
-}
-
-.cal-frame {
+header {
+    text-align: center;
+    background-color: #333333;
+    color: whitesmoke;
     width: 80%;
     margin: auto;
 }
 
-.month-label {
-    text-align: center;
-}
-
-.month-label h2 {
+#calendar {
     margin: auto;
-    font-size: 2em;
-    color: whitesmoke;
-    background-color: #333;
+    /*margin-bottom: 100px;*/
+    width: 80%;
 }
 
-[class*="week-"] {
+#calendar ul {
+    list-style: none;
     padding: 0;
-    height: 25%;
+    margin: 0;
+    width: 100%;
 }
 
-.week-row > .day {
-    height: 100px;
-}
-
-.week-row > .day p {
-    padding: 2px;
-}
-
-.week-labels-full > .day, .week-labels-short > .day {
-    margin: auto;
-    width: 14%;
+#calendar li {
+    display: block;
     float: left;
+    width: 14.342%;
+    padding: 5px;
+    box-sizing: border-box;
+    border: 1px solid #6c6c6c;
+    margin-right: -1px;
+    margin-bottom: -1px;
+}
+
+#calendar ul.weekdays {
+    height: 40px;
+    background: whitesmoke;
+}
+
+#calendar ul.weekdays li {
     text-align: center;
+    line-height: 20px;
+    border: none; /*Needed?*/
+    padding: 10px 6px; /*Needed?*/
+    color: #333333;
+    font-size: inherit;
 }
 
-.week-row {
-    clear: left;
-    overflow: auto;
+#calendar .days li {
+    height: 90px;
+    background: whitesmoke;
 }
 
-.day {
-    width: 14%;
+#calendar .days li:hover {
+    background: antiquewhite;
+}
+
+#calendar .date {
+    text-align: center;
+    margin-bottom: 5px;
+    padding: 4px;
+    background-color: #333;
+    color: #fff;
+    width: 20px;
+    border-radius: 50%; /*Makes it circular*/
     float: left;
 }
-
-.other-month {
-    background-color: navajowhite;
-}
-
-.food-day {
-    position: relative;
+/*Don't know why this doesn't override other*/
+#calendar .other-month {
+    background: #20af5a;
+    color: #666;
 }
 
 .img-link {
-    margin: auto;
-    position: absolute;
+    width: 50%;
     height: auto;
-    width: 60%;
-    left: 20%;
-    display: block;
+    padding-left: 20%;
 }
 
-.week-labels-short {
-    display: none;
-}
-
-@media only screen and (max-width: 900px) {
-    .week-labels-short {
-        display: flex;
-    }
-
-    .week-row > .day  {
-        height: 50px;
-    }
-
-    .week-labels-full {
+@media (max-width: 480px) {
+    #calendar .weekdays, #calendar .other-month {
         display: none;
     }
 
-    .img-link {
-        margin: 0;
-        height: auto;
-        width: 70%;
-        top: 30%;
+    #calendar li {
+        /*height: auto;*/
+        border: 1px solid #ededed;
+        width: 100%;    /*This makes the li's to stretch and make it to a list*/
+        padding: 10px;
+        margin-bottom: -1px;
     }
-}
 
-@media only screen and (max-width: 480px) {
-    p, .month-label  {
-        font-size: 0.75em;
+    #calender .date {
+        /*float: none;*/
+    }
+    .img-link {
+        height: 50px;
+        width: auto;
+    }
+
+    .page-wrap {
+        padding-bottom: 2700px;
     }
 }
