--- a/resources/css/comments.css
+++ b/resources/css/comments.css
@@ -4,30 +4,43 @@
     padding-top: 5%;
 }
 
-.post {
+.comment-box {
     border: solid black 1px;
-    background-color: powderblue;
-    margin-bottom: 10px; /*These two lines need to be relative*/
+    background-color: #fff;
+    margin: auto;
+    margin-bottom: 10px;
     margin-top: 20px;
+    padding: 10px;
+    width: 60%;
 }
 
-.date-from div {
-    display: inline-block;  /*This to make date and from float to each other.*/
+h3 {
+    text-align: center;
 }
 
-.user-pic-fig {
-    margin: 1%;
-    max-width: 10%;
-    display: inline-block;
+textarea {
+    resize: none;
+    display: block;
+    width: 300px;
+    height: 100px;
+    margin: auto;
+    margin-bottom: 10px;
 }
 
-.user-pic-fig img {
-    width: 100%;
+button {
+    margin: auto;
 }
 
-.comment {
-    display: inline-block;
-    vertical-align: top;
-    padding: 1%;
-    width: 80%;
+.comment-notification {
+    width: 300px;
+    padding: 15px;
+    background-color: #333;
+    margin: 15px auto auto;
+    display: block;
+}
+
+.comment-notification p {
+    text-align: center;
+    font-style: italic;
+    color: whitesmoke;
 }
